--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   </section>
 
   <section class="gallery">
-    <img src="images/img1.jpg" alt="Screenshot 1" />
+    <img src="images/img (1).png" alt="Screenshot 1" />
     <img src="images/img2.jpg" alt="Screenshot 2" />
     <img src="images/img3.jpg" alt="Screenshot 3" />
   </section>
