--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
   </section>
 
   <section class="gallery">
-    <img src="images/img1.png" alt="Screenshot 1" />
-    <img src="images/img2.ppg" alt="Screenshot 2" />
-    <img src="images/img3.ppg" alt="Screenshot 3" />
+    <img src="img1.png" alt="Screenshot 1" />
+    <img src="img2.ppg" alt="Screenshot 2" />
+    <img src="img3.ppg" alt="Screenshot 3" />
   </section>
 
   <section class="about">
