--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 
   <section class="gallery">
     <img src="img1.png" alt="Screenshot 1" />
-    <img src="img2.ppg" alt="Screenshot 2" />
-    <img src="img3.ppg" alt="Screenshot 3" />
+    <img src="img2.png" alt="Screenshot 2" />
+    <img src="img3.png" alt="Screenshot 3" />
   </section>
 
   <section class="about">
