--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   </header>
 
   <section class="hero">
-    <img src="images/phone1.jpg" alt="Clipar App Screenshot" />
+    <img src="img2.png" alt="Clipar App Screenshot" />
     <div>
       <h1>The Future of Short Videos</h1>
       <p>Create. Share. Earn. Clipar is redefining content with AI, NFTs, and a seamless viewing experience.</p>
