--- a/index.html
+++ b/index.html
@@ -94,14 +94,15 @@
     .gallery {
       padding: 40px 20px;
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      flex-direction: row;
+      justify-content: center;
       gap: 20px;
+      flex-wrap: wrap;
     }
 
     .gallery img {
       width: 90%;
-      max-width: 400px;
+      max-width: 300px;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     }
@@ -154,7 +155,7 @@
     <div>
       <h1>The Future of Short Videos</h1>
       <p>Create. Share. Earn. Clipar is redefining content with AI, NFTs, and a seamless viewing experience.</p>
-      <a href="https://forms.gle/UaZ7p6ZzTe1ebh228" class="waitlist-btn" target="_blank">Join the Waitlist</a>
+      <a href="https://forms.gle/your-waitlist-form" class="waitlist-btn" target="_blank">Join the Waitlist</a>
     </div>
   </section>
 
