--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Clipar – The Future of Short Videos</title>
   <link rel="stylesheet" href="styles.css" />
-  <link href="https://forms.gle/UaZ7p6ZzTe1ebh228" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -155,7 +155,7 @@
     <div>
       <h1>The Future of Short Videos</h1>
       <p>Create. Share. Earn. Clipar is redefining content with AI, NFTs, and a seamless viewing experience.</p>
-      <a href="https://forms.gle/your-waitlist-form" class="waitlist-btn" target="_blank">Join the Waitlist</a>
+      <a href="https://forms.gle/UaZ7p6ZzTe1ebh228" class="waitlist-btn" target="_blank">Join the Waitlist</a>
     </div>
   </section>
 
