--- a/index.html
+++ b/index.html
@@ -63,7 +63,32 @@
       cursor: pointer;
       text-decoration: none;
     }
-
+    .social-buttons {
+      display: flex;
+      gap: 15px;
+      justify-content: center;
+      margin-top: 28px;
+    }
+    .discord-btn {
+       background-color: #1E90FF;
+       color: #fff;
+       padding: 12px 24px;
+       font-size: 1rem;
+       border: none;
+       border-radius: 8px;
+       cursor: pointer;
+       text-decoration: none;
+    }
+    .twitter-btn {
+       background-color: #696969;
+       color: #fff;
+       padding: 12px 24px;
+       font-size: 1rem;
+       border: none;
+       border-radius: 8px;
+       cursor: pointer;
+       text-decoration: none;
+    }
     .features {
       display: flex;
       flex-direction: column;
@@ -156,6 +181,10 @@
       <h1>The Future of Short Videos</h1>
       <p>Create. Share. Earn. Clipar is redefining content with AI, NFTs, and a seamless viewing experience.</p>
       <a href="https://forms.gle/UaZ7p6ZzTe1ebh228" class="waitlist-btn" target="_blank">Join the Waitlist</a>
+      <div class="social-buttons">
+        <a href="https://discord.com/invite/XqvNd7ufZ8" class="discord-btn" target="_blank">Join Discord</a>
+        <a href="https://x.com/CliparSolution" class="twitter-btn" target="_blank">Join Twitter</a>
+      </div>
     </div>
   </section>
 
