--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
 
     .hero img {
-      width: 120px;
+      width: 120px !important;
       border-radius: 16px;
       margin-bottom: 20px;
     }
