--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
       margin-bottom: 20px;
     }
 
+    .tagline {
+     color: #ccc;
+     font-size: 16px;
+     font-weight: 500;
+     margin-top: 10px;
+     letter-spacing: 2px;
+     text-align: center;
+    }
+    
     .hero h1 {
       font-size: 2rem;
       margin-bottom: 10px;
@@ -202,6 +211,7 @@
 
   <section class="hero">
     <img src="logo.png" alt="Clipar App Screenshot" />
+      <p class="tagline">LEARN | EARN | FUN</p>
     <div>
       <h1>The Future of Short Videos</h1>
       <p>Create. Share. Earn. Clipar is redefining content with AI, NFTs, and a seamless viewing experience.</p>
