--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
       margin-bottom: 20px;
     }
 
+    .logo-section {
+     display: flex;
+     flex-direction: colum;
+     align-items: center;
+    }
+    
     .tagline {
      color: #ccc;
      font-size: 16px;
@@ -210,8 +216,10 @@
   </header>
 
   <section class="hero">
-    <img src="logo.png" alt="Clipar App Screenshot" />
+    <div>
+      <img src="logo.png" alt="Clipar App Screenshot" />
       <p class="tagline">LEARN | EARN | FUN</p>
+    </div>
     <div>
       <h1>The Future of Short Videos</h1>
       <p>Create. Share. Earn. Clipar is redefining content with AI, NFTs, and a seamless viewing experience.</p>
